--- a/docs/api-reference/meal/get-summary.mdx
+++ b/docs/api-reference/meal/get-summary.mdx
@@ -33,33 +33,50 @@ curl --request GET \
       "source_id": 10,
       "provider_id": "123456",
       "timestamp": "2019-08-24T14:15:22Z",
-      "name": "Dinner (Chicken croquet starter)",
-      "energy": {
-        "unit": "kcal",
-        "value": 100
-      },
-      "macros": {
-        "carbs": 42,
-        "protein": 10,
-        "fats": {
-          "saturated": 98,
-          "monounsaturated": 1,
-          "polyunsaturated": 1,
-          "omega3": 0,
-          "omega6": 0,
-          "total": 100
+      "name": "Dinner",
+      "data": {
+        "Chiken coquet starter": {
+          "energy": {
+            "unit": "kcal",
+            "value": 400
+          },
+          "macros": {
+            "carbs": 75,
+            "protein": 10,
+            "fats": {
+              "saturated": 98,
+              "monounsaturated": 1,
+              "polyunsaturated": 1,
+              "omega3": 0,
+              "omega6": 0,
+              "total": 100
+            },
+            "sugar": 25
+          },
+          "micros": {
+            "minerals": {
+              "sodium": 500
+            }
+          }
         },
-        "alcohol": 100,
-        "water": 10,
-        "fibre": 1,
-        "sugar": 32
-      },
-      "micros": {
-        "minerals": {
-          "sodium": 100
-        },
-        "trace_elements": {
-          "zinc": 10
+        "Coffee, black, 1 tbsp(s)": {
+          "energy": {
+            "unit": "kcal",
+            "value": 0
+          },
+          "macros": {
+            "carbs": 0,
+            "protein": 0,
+            "fats": {
+              "total": 0
+            },
+            "sugar": 0
+          },
+          "micros": {
+            "minerals": {
+              "sodium": 0
+            }
+          }
         }
       },
       "source": {
@@ -80,18 +97,18 @@ curl --request GET \
 All values in the returned model are supplied in the following units:
 </Info>
 
-- `meals[*].energy.value` in calories `kcal`
-- `meals[*].macros.carbs` in grams `g`
-- `meals[*].macros.protein` in grams `g`
-- `meals[*].macros.fats.saturated` in grams `g`
-- `meals[*].macros.fats.monounsaturated` in grams `g`
-- `meals[*].macros.fats.polyunsaturated` in grams `g`
-- `meals[*].macros.fats.omega3` in grams `g`
-- `meals[*].macros.fats.omega6` in grams `g`
-- `meals[*].macros.alcohol` in litres `lt`
-- `meals[*].macros.water` in litres `lt`
-- `meals[*].macros.fibre` in grams `g`
-- `meals[*].macros.sugar` in grams `g`
-- `meals[*].micros.minerals` key: value pairs in milligrams `mg`
-- `meals[*].micros.trace_elements` key: value pairs in milligrams `mg`
-- `meals[*].micros.vitamins` key: value pairs in milligrams `mg`
+- `meals[*].data[*].energy.value` in calories `kcal`
+- `meals[*].data[*].macros.carbs` in grams `g`
+- `meals[*].data[*].macros.protein` in grams `g`
+- `meals[*].data[*].macros.fats.saturated` in grams `g`
+- `meals[*].data[*].macros.fats.monounsaturated` in grams `g`
+- `meals[*].data[*].macros.fats.polyunsaturated` in grams `g`
+- `meals[*].data[*].macros.fats.omega3` in grams `g`
+- `meals[*].data[*].macros.fats.omega6` in grams `g`
+- `meals[*].data[*].macros.alcohol` in litres `lt`
+- `meals[*].data[*].macros.water` in litres `lt`
+- `meals[*].data[*].macros.fibre` in grams `g`
+- `meals[*].data[*].macros.sugar` in grams `g`
+- `meals[*].data[*].micros.minerals` key: value pairs in milligrams `mg`
+- `meals[*].data[*].micros.trace_elements` key: value pairs in milligrams `mg`
+- `meals[*].data[*].micros.vitamins` key: value pairs in milligrams `mg`
