fix broken links

--- a/docs/wearables/providers/guides/my_fitness_pal.mdx
+++ b/docs/wearables/providers/guides/my_fitness_pal.mdx
@@ -32,6 +32,6 @@ To connect your device with the _widget_, follow the link wizard ensuring and en
 
 On successful connection, you will receive:
 
-- [Connection create](/webhooks/data_flow#connection-created) wehbook.
-- [Historical Meals](/webhooks/data_flow#historical-data-flow) webhook, implying that the last _2 weeks_ of data are fetched successfully.
-- [Daily webhooks](/webhooks/data_flow#daily-data-flow) `data.daily.meal.created` and `data.daily.meal.updated` are issued, as new or more up-to-date data becomes available.
+- [Connection create](/webhooks/introduction#connection-created) wehbook.
+- [Historical Meal](/webhooks/introduction#historical-data-flow) webhook, implying that the last _2 weeks_ of data are fetched successfully.
+- [Daily webhooks](/webhooks/introduction#daily-data-flow) `data.daily.meal.created` and `data.daily.meal.updated` are issued, as new or more up-to-date data becomes available.
