--- a/docs/wearables/sdks/flutter.mdx
+++ b/docs/wearables/sdks/flutter.mdx
@@ -175,7 +175,7 @@ Depending on the type of device you are connecting to, you will have to call dif
 After you have received samples depending on the type of device you might need to star scanning again to receive the
 next set of samples.
 
-# Migrate from 0.3.* and 0.4.* to 0.5.*
+# 5. Migrate from 0.3.* and 0.4.* to 0.5.*
 
 Our original package **vital_flutter** is now separated into 3 packages: **vital_core**, **vital_health** and **vital_devices**.
 
@@ -212,7 +212,7 @@ import 'package:vital_health/vital_health.dart';
 
 Your IDE should offer the correct import after you have updated your **pubspec.yaml**
 
-## Important changes:
+### Important changes:
 
 - `DeviceManager` was moved out of the `VitalClient` to the **vital_devices** package
 - `HealthkitServices` is now in the **vital_health** package
