--- a/docs/wearables/providers/resources.mdx
+++ b/docs/wearables/providers/resources.mdx
@@ -27,7 +27,7 @@ Summary resources can be fetched from our `/summary/<resource>/<user_id>` API, w
 
 </Tip>
 
-For example, `Workouts` is made up of fields specific to an workout, like calories, distance and duration. When you make a request to `summary/<user_id>/workouts` you get the following fields:
+For example, `Workouts` is made up of fields specific to an workout, like calories, distance and duration. When you make a request to `/summary/workouts/<user_id>` you get the following fields:
 
 ```json
 {
