Added timeseries doc

--- a/docs/wearables/providers/resources.mdx
+++ b/docs/wearables/providers/resources.mdx
@@ -220,4 +220,12 @@ Soon. Work in progress.
 
 ### Timeseries
 
-Soon. Work in progress.
+<iframe
+  src="https://airtable.com/embed/shrtq9mZDz6BRXuz2?backgroundColor=gray&layout=card"
+  frameborder="0"
+  allowfullscreen="true"
+  width="100%"
+  height="533"
+>
+  {" "}
+</iframe>
