--- a/docs/wearables/sdks/react_native.mdx
+++ b/docs/wearables/sdks/react_native.mdx
@@ -70,7 +70,7 @@ The Core SDK is now ready to use. You can now set up the HealthKit SDK and Devic
 
 ## 5. Health kit
 
-You start by enabling HealthKit capabilities in your app. Please follow this [guide](https://developer.apple.com/documentation/healthkit/setting_up_healthkit). It should looks like this:
+You start by enabling HealthKit capabilities in your app. Please follow this [guide](https://developer.apple.com/documentation/healthkit/setting_up_healthkit). It should look like this:
 
 <img src="/img/iOS/health_kit_permission.png" />
 
