--- a/docs/api-reference/link/create-code.mdx
+++ b/docs/api-reference/link/create-code.mdx
@@ -9,14 +9,10 @@ Used for Vital iOS Apps to share Apple HealthKit with you. Please refer [here](/
 
 ```bash Bash
 curl --request POST \
-     --url {{BASE_URL}}/v2/link/code/create \
+     --url {{BASE_URL}}/v2/link/code/create\?user_id\=1875c190-0cd6-46c1-8670-5b56a7794b78 \
      --header 'Accept: application/json' \
      --header 'Content-Type: application/json' \
      --header 'x-vital-api-key: <API_KEY>' \
-     --data '
-{
-     "user_id": "1875c190-0cd6-46c1-8670-5b56a7794b78"
-}
 ```
 
 </RequestExample>
