{{BASE_URL}} and missing backslashes in curl statements

--- a/docs/api-reference/activity/get-raw.mdx
+++ b/docs/api-reference/activity/get-raw.mdx
@@ -7,8 +7,8 @@ openapi: "GET /v2/summary/activity/{user_id}/raw"
 
 ```bash Shell
 curl --request GET \
-     --url https://api.tryvital.io/v2/summary/activity/{user_id}/raw \
-     --header 'Accept: application/json'
+     --url {{BASE_URL}}/v2/summary/activity/{user_id}/raw \
+     --header 'Accept: application/json' \
      --header 'x-vital-api-key: <API_KEY>'
 ```
 
