--- a/docs/api-reference/link/link-demo-provider.mdx
+++ b/docs/api-reference/link/link-demo-provider.mdx
@@ -8,9 +8,9 @@ openapi: "POST /v2/link/connect/demo"
 ```bash Bash
 curl --request POST \
      --url {{BASE_URL}}/v2/link/connect/demo \
-     --header 'Accept: application/json'
+     --header 'Accept: application/json' \
      --header 'Content-Type: application/json' \
-     --header 'x-vital-link-token: <VITAL-LINK-TOKEN>'
+     --header 'x-vital-link-token: <VITAL-LINK-TOKEN>' \
      --data '
 {
     "user_id": "1875c190-0cd6-46c1-8670-5b56a7794b78"
