--- a/docs/api-reference/profile/get-raw.mdx
+++ b/docs/api-reference/profile/get-raw.mdx
@@ -10,7 +10,7 @@ openapi: "GET /v2/summary/profile/{user_id}/raw"
 ```bash Shell
 curl --request GET \
      --url {{BASE_URL}}/v2/summary/profile/{user_id}/raw \
-     --header 'Accept: application/json'
+     --header 'Accept: application/json' \
      --header 'x-vital-api-key: <API_KEY>'
 ```
 
