--- a/docs/api-reference/profile/get-summary.mdx
+++ b/docs/api-reference/profile/get-summary.mdx
@@ -8,7 +8,7 @@ openapi: "GET /v2/summary/profile/{user_id}"
 ```bash Bash
 curl --request GET \
      --url {{BASE_URL}}/v2/summary/profile/{user_id} \
-     --header 'Accept: application/json'
+     --header 'Accept: application/json' \
      --header 'x-vital-api-key: <API_KEY>'
 ```
 
