--- a/docs/api-reference/sleep/get-summary.mdx
+++ b/docs/api-reference/sleep/get-summary.mdx
@@ -8,7 +8,7 @@ openapi: "GET /v2/summary/sleep/{user_id}"
 ```bash Bash
 curl --request GET \
      --url {{BASE_URL}}/v2/summary/sleep/{user_id}?start_date={{START_DATE}}&end_date={{END_DATE}} \
-     --header 'Accept: application/json'
+     --header 'Accept: application/json' \
      --header 'x-vital-api-key: <API_KEY>'
 ```
 
