--- a/docs/api-reference/user/create-user.mdx
+++ b/docs/api-reference/user/create-user.mdx
@@ -6,7 +6,7 @@ openapi: "POST /v2/user"
 
 ```shell Shell
 curl --request POST \
-     --url https://api.tryvital.io/v2/user/ \
+     --url {{BASE_URL}}/v2/user/ \
      --header 'Accept: application/json' \
      --header 'x-vital-api-key: <API_KEY>' \
      --header 'Content-Type: application/json' \
