--- a/docs/api-reference/user/get-user.mdx
+++ b/docs/api-reference/user/get-user.mdx
@@ -7,7 +7,7 @@ openapi: "GET /v2/user/{user_id}"
 
 ```bash Shell
 curl --request GET \
-     --url https://api.tryvital.io/v2/user/{user_id} \
+     --url {{BASE_URL}}/v2/user/{user_id} \
      --header 'x-vital-api-key: <API_KEY>' \
      --header 'Accept: application/json'
 ```
