--- a/docs/api-reference/user/get-users.mdx
+++ b/docs/api-reference/user/get-users.mdx
@@ -6,7 +6,7 @@ openapi: "GET /v2/user"
 
 ```bash Bash
 curl --request GET \
-     --url https://api.tryvital.io/v2/user/ \
+     --url {{BASE_URL}}/v2/user/ \
      --header 'Accept: application/json' \
      --header 'x-vital-api-key: <API_KEY>'
 ```
