--- a/docs/api-reference/workouts/get-stream.mdx
+++ b/docs/api-reference/workouts/get-stream.mdx
@@ -8,7 +8,7 @@ openapi: "GET /v2/timeseries/workouts/{workout_id}/stream"
 ```bash Bash
 curl --request GET \
      --url {{BASE_URL}}/v2/summary/workouts/{workout_id}/stream \
-     --header 'Accept: application/json'
+     --header 'Accept: application/json' \
      --header 'x-vital-api-key: <API_KEY>'
 ```
 
