--- a/docs/api-reference/body/get-summary.mdx
+++ b/docs/api-reference/body/get-summary.mdx
@@ -7,8 +7,8 @@ openapi: "GET /v2/summary/body/{user_id}"
 
 ```bash Shell
 curl --request GET \
-     --url https://api.tryvital.io/v2/summary/body/{user_id} \
-     --header 'Accept: application/json'
+     --url {{BASE_URL}}/v2/summary/body/{user_id} \
+     --header 'Accept: application/json' \
      --header 'x-vital-api-key: <API_KEY>'
 ```
 
