--- a/docs/api-reference/link/link-email-provider.mdx
+++ b/docs/api-reference/link/link-email-provider.mdx
@@ -10,7 +10,7 @@ curl --request POST \
      --url {{BASE_URL}}/v2/link/provider/email/{provider} \
      --header 'Accept: application/json' \
      --header 'Content-Type: application/json' \
-     --header 'x-vital-link-token: <VITAL-LINK-TOKEN>'
+     --header 'x-vital-link-token: <VITAL-LINK-TOKEN>' \
      --data '
 {
      "email": "test@email.com"
