--- a/docs/api-reference/sleep/get-stream.mdx
+++ b/docs/api-reference/sleep/get-stream.mdx
@@ -7,8 +7,8 @@ openapi: "GET /v2/timeseries/sleep/{sleep_id}/stream"
 
 ```bash Bash
 curl --request GET \
-    --url https://api.tryvital.io/v2/summary/sleep/{sleep_id}/stream \
-    --header 'Accept: application/json'
+    --url {{BASE_URL}}/v2/summary/sleep/{sleep_id}/stream \
+    --header 'Accept: application/json' \
     --header 'x-vital-api-key: <API_KEY>'
 ```
 
