--- a/docs/api-reference/vitals/respiratory-rate.mdx
+++ b/docs/api-reference/vitals/respiratory-rate.mdx
@@ -8,7 +8,7 @@ openapi: "GET /v2/timeseries/{user_id}/respiratory_rate"
 ```bash Bash
 curl --request GET \
      --url {{BASE_URL}}/v2/timeseries/{user_id}/respiratory_rate?start_date={{START_DATE}}&end_date={{END_DATE}} \
-     --header 'Accept: application/json'
+     --header 'Accept: application/json' \
      --header 'x-vital-api-key: <API_KEY>'
 ```
 
