--- a/docs/api-reference/workouts/get-raw.mdx
+++ b/docs/api-reference/workouts/get-raw.mdx
@@ -8,7 +8,7 @@ openapi: "GET /v2/summary/workouts/{user_id}/raw"
 ```bash Bash
 curl --request GET \
      --url {{BASE_URL}}/v2/summary/workouts/{user_id}/raw \
-     --header 'Accept: application/json'
+     --header 'Accept: application/json' \
      --header 'x-vital-api-key: <API_KEY>'
 ```
 
