--- a/docs/wearables/providers/test_data.mdx
+++ b/docs/wearables/providers/test_data.mdx
@@ -4,7 +4,7 @@ description: "Using demo users to build and test your Vital integration"
 ---
 
 <Note>
-This feature is currently under development for the following providers:
+This feature is currently available for the following providers:
 
 - Apple Health Kit
 - Fitbit
@@ -19,6 +19,17 @@ please do not hesitate to contact us at support@tryvital.io!
 When integrating with Vital, you may not own a physical device for each provider you're planning to support. For this, we provide demo users with test data so you can build and test the whole integration without touching a real device.
 
 A demo user gives you the same experience as using a real one, the only difference is that you won't go through the [Vital Link](/wearables/vital-link/introduction) flow.
+
+<Warning>
+
+Demo users have certain limitations to keep in mind:
+
+- Only available in sandbox.
+- A demo user cannot have connections to a real device. If you already have a user with real data, you need to create a new one to connect a demo account.
+- There is no limitation on the number of demo users you can create, but they do count towards the overall users limit in sandbox. Up to date limits can be found [on this page](/home/environments).
+- Demo users expire after 7 days, meaning the user and its data will be deleted.
+
+</Warning>
 
 ## Usage
 
