docs: VIT-2357 Add samsung health to providers

--- a/docs/wearables/providers/introduction.mdx
+++ b/docs/wearables/providers/introduction.mdx
@@ -10,8 +10,7 @@ We currently Support over 300+ devices, a full list can be seen below.
 | [Fitbit](https://www.fitbit.com/global/uk/home)                              | `fitbit`              | Activity Trackers (all devices)                               |
 | [Garmin](https://www.garmin.com)                                             | `garmin`              | Fitness watches (all devices)                                 |
 | [Google Fit](https://www.google.com/fit/)                                    | `google_fit`          | Activity Trackers (all devices)                               |
-| [Health Connect](https://developer.android.com/health-connect)               | `health_connect`      | Activity Trackers (all devices)                               |
-| [Samsung Health](https://www.samsung.com/global/galaxy/apps/samsung-health/) | `health_connect`      | Activity Trackers (all devices)                               |
+| [Samsung Health](https://www.samsung.com/global/galaxy/apps/samsung-health/) | `samsung_health`      | Activity Trackers (all devices)                               |
 | [Oura](https://ouraring.com)                                                 | `oura`                | Smart Sleep tracking ring                                     |
 | [Peloton](https://www.onepeloton.com)                                        | `peloton`             | Popular Indoor Exercise bike                                  |
 | [Renpho](https://renpho.com)                                                 | `renpho`              | Fitness Scales                                                |
