we haven't implemented this one yet.

--- a/docs/api-reference/vitals/blood-pressure.mdx
+++ b/docs/api-reference/vitals/blood-pressure.mdx
@@ -13,11 +13,7 @@ curl --request GET \
 ```
 
 ```python Python
-data = client.Vitals.igg(
-    user_id=*,
-    start_date={{START_DATE}},
-    end_date={{END_DATE}}
-)
+Not implemented yet.
 ```
 
 </RequestExample>
