Add at-home phlebotomy statuses

--- a/docs/lab/workflow/lab-test-lifecycle.mdx
+++ b/docs/lab/workflow/lab-test-lifecycle.mdx
@@ -68,3 +68,15 @@ The following walk in statuses are used:
 - `walk_in.requisition_created`
 - `walk_in.order_completed`
 - `walk_in.sample_error`
+
+### At home phlebotomy statuses
+
+The following walk in statuses are used:
+
+- `at_home_phlebotomy.ordered`
+- `at_home_phlebotomy.requisition_created`
+- `at_home_phlebotomy.appointment_scheduled`
+- `at_home_phlebotomy.draw_completed`
+- `at_home_phlebotomy.completed`
+- `at_home_phlebotomy.cancelled`
+
