Add documentation on Time Zone Awareness

--- a/docs/api-reference/activity/get-summary.mdx
+++ b/docs/api-reference/activity/get-summary.mdx
@@ -36,7 +36,7 @@ data = client.Activity.get(
 {
   "activity": [
     {
-      "date": "2022-08-04",
+      "calendar_date": "2022-08-04",
       "calories_total": 100,
       "calories_active": 2000,
       "steps": 10000,
