--- a/docs/api-reference/sleep/get-summary.mdx
+++ b/docs/api-reference/sleep/get-summary.mdx
@@ -37,7 +37,7 @@ data = client.Sleep.get(
   "sleep": [
     {
       "id": "6f9d156f-a497-47b2-b940-d13771c7c937",
-      "date": "2022-08-04",
+      "calendar_date": "2022-08-04",
       "bedtime_start": "2022-08-04T12:42:45.724597+00:00",
       "bedtime_stop": "2022-08-04T12:42:45.724600+00:00",
       "timezone_offset": 2400,
