--- a/docs/api-reference/workouts/get-summary.mdx
+++ b/docs/api-reference/workouts/get-summary.mdx
@@ -39,8 +39,10 @@ data = client.Workouts.get(
     "average_hr": 100,
     "max_hr": 190,
     "distance": 1700,
+    "calendar_date": "2022-08-04",
     "time_start": "2022-08-04T11:42:44.864554+00:00",
     "time_end": "2022-08-04T12:42:44.864576+00:00",
+    "timezone_offset": 2400,
     "calories": 300,
     "sport": {
       "id": 1,
