--- a/docs/api-reference/body/get-summary.mdx
+++ b/docs/api-reference/body/get-summary.mdx
@@ -37,7 +37,7 @@ data = client.Body.get(
   "body": [
     {
       "id": "4340a0fa-549c-4a47-bd83-b2af6bbeffa9",
-      "date": "2022-08-04",
+      "calendar_date": "2022-08-04",
       "weight": "80kg",
       "fat": "30%",
       "height": 183,
